--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -1,8 +1,6 @@
-
-
 <div class= "mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 pt-16" >
   <div class="mx-auto max-w-3xl">
-    <h1>Inside new board Template</h1>
+    <h1>Edit the board </h1>
     <%= render partial: "form", locals: {board: @board}%>
   </div>
 </div>
