--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -13,14 +13,10 @@
           <div>
           <div class="-mt-px flex divide-x divide-gray-200">
             <div class="flex w-0 flex-1">
-              <a href="mailto:janecooper@example.com" class="relative -mr-px inline-flex w-0 flex-1 items-center justify-center gap-x-3 rounded-bl-lg border border-transparent py-4 text-sm font-semibold text-blue-500">
-               edit
-              </a>
+              <%= link_to "Edit", edit_board_path(board.id), class: "relative -mr-px inline-flex w-0 flex-1 items-center justify-center gap-x-3 rounded-bl-lg border border-transparent py-4 text-sm font-semibold text-blue-500" %>
             </div>
             <div class="-ml-px flex w-0 flex-1">
-              <a  class="relative inline-flex w-0 flex-1 items-center justify-center gap-x-3 rounded-br-lg border border-transparent py-4 text-sm font-semibold text-red-500">
-                delete
-              </a>
+              <%= link_to "Destroy", board_path(board.id), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "relative inline-flex w-0 flex-1 items-center justify-center gap-x-3 rounded-br-lg border border-transparent py-4 text-sm font-semibold text-red-500" %>
             </div>
           </div>
         </li>
