--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,7 +1,7 @@
-<div class= "mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 pt-16" data-controller= "board" >
-  <div class="mx-auto max-w-3xl">
+<div class= "mx-auto max-w-7xl px-4 px-24 py-12 pt-16" data-controller= "board" >
+  <div class="mx-auto max-w-full">
     <h1>jkanban</h1>
-    <div id="board"> </div>
+    <div id="board" style="overflow-x: scroll;"> </div>
   </div>
 </div>
 
